# ersap-actor

./: .gitignore  BUILD_INSTRUCTIONS.md  HAIDIS_ACTOR_REFACTORING.md  README.md  build.gradle  lib  services.yaml  settings.gradle
Workspace/ersap/sampa/: setup-ersap.bash  setup-ersap.tcsh
Workspace/ersap/sampa/user_data/config/: files.txt  s2.yaml  s6.yaml  services.yaml
src/main/cpp/: CMakeLists.txt  test_compilation.sh
src/main/cpp/include/: CodaTImeFrameBinaryDataType.hpp  CodaTimeFrameBinaryPrinterActor.hpp  CodaTimeFrameDataType.hpp  CodaTimeFramePrinterActor.hpp  HaidisActor.hpp  HaidisGluesLinkActor.hpp  HaidisGluexActor.hpp  HaidisGluexLinkActor.hpp  HaidisLinkActor.hpp  haidis_shem_writer.hpp
src/main/cpp/src/: CodaTImeFrameBinaryDataType.cpp  CodaTimeFrameBinaryPrinterActor.cpp  CodaTimeFrameDataType.cpp  CodaTimeFramePrinterActor.cpp  haidis_actor.cpp  haidis_gleux_actor.cpp  haidis_glues_link_actor.cpp  haidis_gluex_link_actor.cpp  haidis_link_actor.cpp  haidis_shem_writer.cpp
src/main/cpp/tests/: test_coda_time_frame_serializer.cpp
src/main/java/org/jlab/ersap/actor/coda/: README.md  ersap-coda.yaml  manual.yaml  service_et.yaml  service_socket.yaml  services.yaml
src/main/java/org/jlab/ersap/actor/coda/engine/: CodaEtSourceEngine.java  CodaFileSinkEngine.java  CodaFileSourceEngine.java  CodaHistogramEngine.java  CodaHistogramSinkEngine.java  CodaHitFinderEngine.java  CodaSinkEngine.java  CodaSocketSourceEngine.java  CustomEvio4ParserEngine.java  EmptyEngine.java  EventIdentificationEngine.java  FadcHistogramEngine.java  MultiChannelDigitizerDisplay.java  PcapEvio4ParserSourceEngine.java  UniAdapterSourceEngine.java
src/main/java/org/jlab/ersap/actor/coda/engine/nat/: CodaHitFinderNativeEngine.java  CodaSinkNativeEngine.java  MultiChannelDigitizerDisplayNative.java
src/main/java/org/jlab/ersap/actor/coda/oldvtp/: AdcHit.java  ChargeTime.java  EUtil.java  Fadc2Hipo.java  PayloadDecoderFactory.java  PayloadDecoderPool.java  VAdcHit.java  VAdcHitMap.java  VConsumer.java  VPayloadDecoder.java  VReceiver.java  VRingRawEvent.java  VRingRawEventFactory.java  VTP1StreamReceiverDecoder.java
src/main/java/org/jlab/ersap/actor/coda/oldvtp/engine/: VTP1SourceEngine.java
src/main/java/org/jlab/ersap/actor/coda/proc/: Awtbc.java  AwtbcBuilder.java  CustomEvioEventParser.java  EVIO4EvtParser.java  EtEvent.java  EvioEventParser.java  FADCHit.java  IStreamItem.java  LiveHistogram.java  ManualHistogram.java  RocTimeFrameBank.java
src/main/java/org/jlab/ersap/actor/coda/proc/fadc/: FADCHit.java  FadcUtil.java  RocTimeFrameBank.java  RocTimeSliceBank.java  RocTimeSliceBanks.java
src/main/java/org/jlab/ersap/actor/coda/source/: Consumer.java  RingEvent.java  RingEventFactory.java  UniAdapter.java
src/main/java/org/jlab/ersap/actor/coda/source/et/: CodaETReader.java
src/main/java/org/jlab/ersap/actor/coda/source/file/: CodaOutputFileReader.java  FADCHit.java
src/main/java/org/jlab/ersap/actor/coda/source/socket/: AbstractConnectionHandler.java  Event.java  MultiSocketStreamReceiver.java  SingleSocketStreamReceiver.java  SocketConnectionHandler.java  StreamParameters.java
src/main/java/org/jlab/ersap/actor/datatypes/: CodaTimeFrameBinaryDataType.java  CodaTimeFrameDataType.java  DasDataType.java  EVIODataType.java  JavaObjectType.java
src/main/java/org/jlab/ersap/actor/helloworld/: README.md  helloworld.yaml
src/main/java/org/jlab/ersap/actor/helloworld/engine/: FileReaderEngine.java  HelloWorldEngine.java  PrintStdIOEngine.java  StreamReaderEngine.java
src/main/java/org/jlab/ersap/actor/helloworld/sink/: PrintStdIO.java
src/main/java/org/jlab/ersap/actor/helloworld/source/: AyanFileReader.java
src/main/java/org/jlab/ersap/actor/hipo/: HipoEventSplitter.java
src/main/java/org/jlab/ersap/actor/rtdp/source/pcap/: PcapPayloadExtractor.java  PcapReader.java  build.gradle
src/main/java/org/jlab/ersap/actor/sampa/: EMode.java  README.md  ersap-sampa.yaml
src/main/java/org/jlab/ersap/actor/sampa/engine/: SampaDAS2SSourceEngine.java  SampaDAS2SourceEngine.java  SampaDASFileSourceEngine.java  SampaDASSourceEngine.java  SampaFileSinkEngine.java  SampaHistogramProcEngine.java  SampaHitIdentificationEngine.java  SampaStatProcEngine.java
src/main/java/org/jlab/ersap/actor/sampa/proc/: Das2StreamStatistics.java  Das6StreamStatistics.java  DasHistogram.java  DasStreamStatistics.java  DecodedOutputFileReader.java  DoubleDumper.java  ELinkStats.java  JsonFileWriter.java  ReceiveAndDumper.java  SProcessor.java  SampaDasGson.java  TranslationTable.java
src/main/java/org/jlab/ersap/actor/sampa/source/: SReceiveDecodeAggregate.java
src/main/java/org/jlab/ersap/actor/sampa/source/decoder/: DasDecoder.java  DspDecoder.java  IDecoder.java
src/main/java/org/jlab/ersap/actor/sampa/source/recagg/: SAggregator.java  SConsumer.java  SFileReaderDecoder.java  SReceiverDecoder.java
src/main/java/org/jlab/ersap/actor/sampa/source/ring/: SRingRawEvent.java  SRingRawEventFactory.java
src/main/java/org/jlab/ersap/actor/sampa/source/s2/: S2Aggregator.java  S2RecDecAgg.java  S2RecDecAggCons.java
src/main/java/org/jlab/ersap/actor/util/: AConstants.java  AUtil.java  EConstants.java  EUtil.java  FADCHit.java  FadcUtil.java  IAProcessor.java  IASource.java  ISourceReader.java  NibblePrinter.java  O2B2O.java  QueueMonitor.java  RocTimeSliceBank.java  VtpPayloadDecoderEvio.java
src/main/proto/: CodaTimeFrame.proto
src/main/resources/: BulkPrintStdIOEngine.yaml  FileReaderEngine.yaml  PrintStdIOEngine.yaml  RandomNumGenEngine.yaml  SampaFileSinkEngine.yaml  StreamReaderEngine.yaml
src/main/resources/org/jlab/ersap/actor/coda/engine/: CodaEtSourceEngine.yaml  CodaFileSinkEngine.yaml  CodaFileSourceEngine.yaml  CodaHistogramSinkEngine.yaml  CodaSinkEngine.yaml  CodaSocketSourceEngine.yaml  EventIdentificationEngine.yaml  PcapEvio4ParserSourceEngine.yaml  SampaDASFileSourceEngine.yaml  SampaDASSourceEngine.yaml  SampaFileSinkEngine.yaml  UniAdapterSourceEngine.yaml
src/main/resources/org/jlab/ersap/actor/engine/: CodaEtSourceEngine.yaml  SampaDAS2SourceEngine.yaml
(+1 files in other folders)
